<resources>
    <string name="app_name">Coffie Shop</string>
    <string name="snap">The best grain,The finest roast\nThe powerful flavor</string>
    <string name="get_started">Get Started</string>
    <string name="choice_your">Choice your\n Favourite Coffee</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="search_anything">Search anything.....</string>
    <string name="coffee_size">Coffee size</string>
    <string name="title">Title</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="qty">Qty.</string>
    <string name="minus">-</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_0">$0</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
</resources>