<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/coffee_image"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_24" />

            <TextView
                android:id="@+id/back_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:textColor="@color/dark_brown"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/back_btn"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="@id/back_btn" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/back_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/back_txt"
                app:srcCompat="@drawable/favorite_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="-20dp"
                android:background="@drawable/white_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coffee_image">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/coffee_size_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/coffee_size"
                        android:textColor="@color/dark_brown"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_text" />

                    <LinearLayout
                        android:id="@+id/orangeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/orange_bg"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        app:layout_constraintTop_toBottomOf="@+id/coffee_size_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/small_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/small"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textAlignment="center"/>

                        <TextView
                            android:id="@+id/medium_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/medium"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textAlignment="center"/>

                        <TextView
                            android:id="@+id/large_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/large"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/quantityLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/orangeLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/qty"
                            android:textColor="@color/dark_brown"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/border_bg"
                            android:minWidth="100dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/minus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/minus"
                                android:textAlignment="center"
                                android:textColor="@color/dark_brown"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/number_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="1"
                                android:textAlignment="center"
                                android:textColor="@color/dark_brown"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/plus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="+"
                                android:textAlignment="center"
                                android:textColor="@color/dark_brown"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/rating_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="0"
                            android:textAlignment="viewEnd"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/dark_brown"/>

                        <ImageView
                            android:id="@+id/star"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/star"
                            android:layout_marginStart="10dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/desc_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/description"
                        android:textColor="@color/dark_brown"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/quantityLayout" />

                    <TextView
                        android:id="@+id/description_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:textColor="@color/description_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/desc_text" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/addToCart_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/border_full_corner_bg"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description_text">

                        <TextView
                            android:id="@+id/addToCart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/add_to_cart"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/view"
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="20dp"
                            android:background="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/d_coffee_price"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/d_coffee_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:text="@string/_0"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>